[gd_scene load_steps=3 format=2]

[ext_resource path="res://Buildings Resources/Osseorium_Placeholder_Icon.png" type="Texture" id=1]
[ext_resource path="res://HUD/BuildingDescription.gd" type="Script" id=2]

[node name="BuildingDescription" type="VBoxContainer"]
margin_right = 336.0
margin_bottom = 110.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseBox" type="HBoxContainer" parent="."]
margin_right = 336.0
margin_bottom = 110.0
hint_tooltip = "Uh, what?"
size_flags_stretch_ratio = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingIcon" type="TextureRect" parent="BaseBox"]
margin_right = 64.0
margin_bottom = 110.0
texture = ExtResource( 1 )

[node name="BuildingInfo" type="VBoxContainer" parent="BaseBox"]
margin_left = 68.0
margin_right = 248.0
margin_bottom = 110.0
grow_horizontal = 0
rect_min_size = Vector2( 180, 0 )
size_flags_stretch_ratio = 0.0
custom_constants/separation = 0

[node name="NameBuilding" type="Label" parent="BaseBox/BuildingInfo"]
margin_right = 180.0
margin_bottom = 14.0
text = "Osseorium"

[node name="BuildingDesc" type="Label" parent="BaseBox/BuildingInfo"]
margin_top = 14.0
margin_right = 180.0
margin_bottom = 96.0
text = "Allows you to recruit more advanced forms of undead

+3 corpses
+1 recruitment capacity"
autowrap = true

[node name="BuildingFuncs" type="VBoxContainer" parent="BaseBox"]
margin_left = 252.0
margin_right = 332.0
margin_bottom = 110.0
rect_min_size = Vector2( 80, 0 )
alignment = 2

[node name="Costs" type="VBoxContainer" parent="BaseBox/BuildingFuncs"]
margin_right = 80.0
margin_bottom = 68.0

[node name="CostsTitle" type="Label" parent="BaseBox/BuildingFuncs/Costs"]
margin_right = 80.0
margin_bottom = 14.0
text = "Cost"

[node name="Gold" type="Label" parent="BaseBox/BuildingFuncs/Costs"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 32.0
text = "200 Gold"

[node name="Corpse" type="Label" parent="BaseBox/BuildingFuncs/Costs"]
margin_top = 36.0
margin_right = 80.0
margin_bottom = 50.0
text = "5 Corpses"

[node name="Contagion" type="Label" parent="BaseBox/BuildingFuncs/Costs"]
margin_top = 54.0
margin_right = 80.0
margin_bottom = 68.0

[node name="BuildButton" type="Button" parent="BaseBox/BuildingFuncs"]
margin_top = 72.0
margin_right = 80.0
margin_bottom = 92.0
mouse_filter = 1
text = "Build"

[node name="ConstructionTime" type="Label" parent="BaseBox/BuildingFuncs"]
margin_top = 96.0
margin_right = 80.0
margin_bottom = 110.0

[node name="CenterContainer" type="CenterContainer" parent="BaseBox"]
margin_left = 336.0
margin_right = 336.0
margin_bottom = 110.0
mouse_filter = 1

[node name="ErrorMessage" type="Label" parent="."]
visible = false
margin_top = 114.0
margin_right = 336.0
margin_bottom = 128.0
text = "If you see this text, something has gone wrong"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 114.0
margin_right = 336.0
margin_bottom = 118.0
mouse_filter = 1
[connection signal="pressed" from="BaseBox/BuildingFuncs/BuildButton" to="." method="_on_BuildButton_pressed"]
